fixed fonts and spacing

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -1,13 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Montserrat&family=Mulish&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: -apple-system, 'Mulish', BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1 {
+  font-family: -apple-systemn, 'Jost', sans-serif;
+  font-weight: bold;
+
+}
 a {
   color: inherit;
   text-decoration: none;
